--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             background: linear-gradient(to bottom, var(--color-background), var(--color-white));
         }
 
-        .video-grid .video-grids {
+        .video-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 30px;
@@ -709,7 +709,7 @@
             .hero-content h1 { font-size: 3.5rem; }
             .hero-content p { font-size: 1.4rem; }
             .about-content { flex-direction: column; }
-            .video-grid .video-grids { grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
+            .video-grid { grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
             .language-list { grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); }
         }
 
@@ -830,7 +830,7 @@
 
     <section id="fuwyl">
         <h2 class="animate-fade">Featured Playlists</h2>
-        <div class="video-grids">
+        <div class="video-grid">
             <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 1: Gabrielle Version')" onkeypress="if(event.key === 'Enter') showModal('Project 1: Gabrielle Version')">
                 <iframe src="https://www.youtube.com/embed/0M_9DdkrWFU" title="Project 1: Gabrielle Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="video-caption">Project 1: Gabrielle</div>
@@ -844,9 +844,97 @@
 
     <!-- Featured Content Section -->
     <section id="featured">
-        <h2 class="animate-fade">Featured Playlists</h2>
-        <div class="video-grid"></div>
-    </section>
+    <h2 class="animate-fade">Featured Playlists</h2>
+    <div class="video-grid">
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 1: Gabrielle Version')" onkeypress="if(event.key === 'Enter') showModal('Project 1: Gabrielle Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmRAJCHuGJ5n1G-5k5qJ2cI-&autoplay=0&enablejsapi=1" title="Project 1: Gabrielle Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Project 1: Gabrielle</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 2: A World In Pain Version')" onkeypress="if(event.key === 'Enter') showModal('Project 2: A World In Pain Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmRZ_4edcdieHKNdmNu4NQ3J&autoplay=0&enablejsapi=1" title="Project 2: A World In Pain Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Project 2: A World In Pain</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 3: Bloodwashed Version')" onkeypress="if(event.key === 'Enter') showModal('Project 3: Bloodwashed Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmQFsLmXNrPPeJ6hqexc8niN&autoplay=0&enablejsapi=1" title="Project 3: Bloodwashed Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Project 3: Bloodwashed</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 4: Polly Esther Version')" onkeypress="if(event.key === 'Enter') showModal('Project 4: Polly Esther Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmTp7QmJrgwbPWoZBQZbeXOd&autoplay=0&enablejsapi=1" title="Project 4: Polly Esther Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Project 4: Polly Esther</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 5: Bed of Roses Version')" onkeypress="if(event.key === 'Enter') showModal('Project 5: Bed of Roses Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmS2Q9gsVbfdvay_MHXn7fp8&autoplay=0&enablejsapi=1" title="Project 5: Bed of Roses Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Project 5: Bed of Roses</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 6: Madness Version')" onkeypress="if(event.key === 'Enter') showModal('Project 6: Madness Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmTM9VBgY8g772harg0d_zET&autoplay=0&enablejsapi=1" title="Project 6: Madness Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Project 6: Madness</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 7: A Touch of Heaven Version')" onkeypress="if(event.key === 'Enter') showModal('Project 7: A Touch of Heaven Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmSHEvT5JLanNnLcGsAzp-LY&autoplay=0&enablejsapi=1" title="Project 7: A Touch of Heaven Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Project 7: A Touch of Heaven</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 8: The Path Version')" onkeypress="if(event.key === 'Enter') showModal('Project 8: The Path Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmRfqomtP-JItoOK-IxSWWVl&autoplay=0&enablejsapi=1" title="Project 8: The Path Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Project 8: The Path</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Fishers of Men Version')" onkeypress="if(event.key === 'Enter') showModal('Fishers of Men Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmTGUprtW7BZvXPK2Ri3ji2w&autoplay=0&enablejsapi=1" title="Fishers of Men Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Fishers of Men</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Worshipper Music Version')" onkeypress="if(event.key === 'Enter') showModal('Worshipper Music Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmRUhAnZEmDbHqEpdEFYqtQ5&autoplay=0&enablejsapi=1" title="Worshipper Music Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Worshipper Music</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Commissioned Work Version')" onkeypress="if(event.key === 'Enter') showModal('Commissioned Work Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmQO0xQIKyX9fFjRVhNDElGH&autoplay=0&enablejsapi=1" title="Commissioned Work Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Commissioned Work</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Where Is God Version')" onkeypress="if(event.key === 'Enter') showModal('Where Is God Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmQMukDG9-XaE9uRLQHKpaqg&autoplay=0&enablejsapi=1" title="Where Is God Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Where Is God</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Unconditional Love of God Version')" onkeypress="if(event.key === 'Enter') showModal('Unconditional Love of God Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmTwDs-qg3PJeKaR3peL5xFF&autoplay=0&enablejsapi=1" title="Unconditional Love of God Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Unconditional Love of God</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Why We Don’t Bless Version')" onkeypress="if(event.key === 'Enter') showModal('Why We Don’t Bless Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmRlI_E2_BmzCBbc1MG9mWlK&autoplay=0&enablejsapi=1" title="Why We Don’t Bless Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Why We Don’t Bless</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('The Colt Version')" onkeypress="if(event.key === 'Enter') showModal('The Colt Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmT1w1BaPPCvXY01-goubimr&autoplay=0&enablejsapi=1" title="The Colt Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">The Colt</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Fisher of Men Version')" onkeypress="if(event.key === 'Enter') showModal('Fisher of Men Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmTGUprtW7BZvXPK2Ri3ji2w&autoplay=0&enablejsapi=1" title="Fisher of Men Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Fisher of Men</div>
+        </div>
+
+        <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Narrated Version')" onkeypress="if(event.key === 'Enter') showModal('Narrated Version')">
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmS9bm07k8sYOoU7Bo9LYMt8&autoplay=0&enablejsapi=1" title="Narrated Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-caption">Narrated</div>
+        </div>
+
+    </div>
+</section>
+
 
     <!-- Community Section -->
     <section id="community">
@@ -912,59 +1000,6 @@
 
     <!-- JavaScript -->
     <script>
-
-       const translations = [
-  { language: "Project 1: Gabrielle", url: "PLZ-Bkhyr_AmRAJCHuGJ5n1G-5k5qJ2cI-" },
-  { language: "Project 2: A World In Pain", url: "PLZ-Bkhyr_AmRZ_4edcdieHKNdmNu4NQ3J" },
-  { language: "Project 3: Bloodwashed", url: "PLZ-Bkhyr_AmQFsLmXNrPPeJ6hqexc8niN" },
-  { language: "Project 4: Polly Esther", url: "PLZ-Bkhyr_AmTp7QmJrgwbPWoZBQZbeXOd" },
-  { language: "Project 5: Bed of Roses", url: "PLZ-Bkhyr_AmS2Q9gsVbfdvay_MHXn7fp8" },
-  { language: "Project 6: Madness", url: "PLZ-Bkhyr_AmTM9VBgY8g772harg0d_zET" },
-  { language: "Project 7: A Touch of Heaven", url: "PLZ-Bkhyr_AmSHEvT5JLanNnLcGsAzp-LY" },
-  { language: "Project 8: The Path", url: "PLZ-Bkhyr_AmRfqomtP-JItoOK-IxSWWVl" },
-  { language: "Fishers of Men", url: "PLZ-Bkhyr_AmTGUprtW7BZvXPK2Ri3ji2w" },
-  { language: "Worshipper Music", url: "PLZ-Bkhyr_AmRUhAnZEmDbHqEpdEFYqtQ5" },
-  { language: "Commissioned Work", url: "PLZ-Bkhyr_AmQO0xQIKyX9fFjRVhNDElGH" },
-  { language: "Where Is God", url: "PLZ-Bkhyr_AmQMukDG9-XaE9uRLQHKpaqg" },
-  { language: "Unconditional Love of God", url: "PLZ-Bkhyr_AmTwDs-qg3PJeKaR3peL5xFF" },
-  { language: "Why We Don’t Bless", url: "PLZ-Bkhyr_AmRlI_E2_BmzCBbc1MG9mWlK" },
-  { language: "The Colt", url: "PLZ-Bkhyr_AmT1w1BaPPCvXY01-goubimr" },
-  { language: "Fisher of Men", url: "PLZ-Bkhyr_AmTGUprtW7BZvXPK2Ri3ji2w" },
-  { language: "Narrated", url: "PLZ-Bkhyr_AmS9bm07k8sYOoU7Bo9LYMt8" }
-];
-
-// --- dynamically add iframes ---
-const grid = document.querySelector(".video-grid");
-grid.innerHTML = "";
-
-translations.forEach(item => {
-  // For playlists, use embed URL for a playlist
-  const embedUrl = `https://www.youtube.com/embed/videoseries?list=${item.url}&autoplay=0&enablejsapi=1`;
-
-  const div = document.createElement("div");
-  div.className = "video-item animate-zoom";
-  div.setAttribute("role", "button");
-  div.setAttribute("tabindex", "0");
-  div.setAttribute("onclick", `showModal('${item.language} Version')`);
-  div.setAttribute("onkeypress", `if(event.key === 'Enter') showModal('${item.language} Version')`);
-
-  const iframe = document.createElement("iframe");
-  iframe.src = embedUrl;
-  iframe.title = `${item.language} Playlist`;
-  iframe.loading = "lazy";
-  iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture";
-  iframe.allowFullscreen = true;
-
-  const caption = document.createElement("div");
-  caption.className = "video-caption";
-  caption.textContent = item.language;
-
-  div.appendChild(iframe);
-  div.appendChild(caption);
-  grid.appendChild(div);
-});
-
-
 
         // Navigation Toggle
             const navToggle = document.querySelector('.nav-toggle');
@@ -1096,15 +1131,3 @@ translations.forEach(item => {
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
