--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ padding: 8px 18px;
         <p>&copy; 2025 Fill Us with Your Love Translations. All rights reserved.</p>
         <div>
             <a href="terms.html" aria-label="Terms of Use">Terms of Use</a> |
-            <a href="mailto:churchs@gmail.com" aria-label="Contact Us">Contact Us</a>
+            <a href="mailto:churches@gmail.com" aria-label="Contact Us">Contact Us</a>
         </div>
         <button class="cta-button animate-pulse" 
         onclick="window.open('https://www.paypal.com/paypalme/worshippermedia', '_blank')" 
@@ -634,3 +634,4 @@ translationsFUWYL.forEach(item => {
 </body>
 
 </html>
+
