--- a/terms.html
+++ b/terms.html
@@ -179,8 +179,8 @@
         </p>
 
         <p style="font-family: 'Poppins', sans-serif; color: #444; font-size: 1.1rem; line-height: 1.7;">
-            Still, we’d love to hear from you! ❤️  
-            If you do share our videos, feel free to <a href="mailto:churchs@gmail.com" style="color: #007BFF; text-decoration: none;">drop us a note</a> and let us know where they’re being shown — it’s always a joy to see how far God’s Word travels.
+            we’d love to hear from you! ❤️  
+            If you do share our videos, feel free to <a href="mailto:churches@gmail.com" style="color: #007BFF; text-decoration: none;">drop us a note</a> and let us know where they’re being shown — it’s always a joy to see how far God’s Word travels.
         </p>
 
         <p style="font-family: 'Poppins', sans-serif; color: #444; font-size: 1.1rem; line-height: 1.7;">
@@ -216,4 +216,5 @@
 
 
 </body>
+
 </html>
