--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ padding: 8px 18px;
             Your browser does not support the video tag.
         </video>
         <div class="hero-content">
-            <h1 class="animate-slide-left">Worshipper Media</h1>
+            <h1 class="animate-slide-left">Worshiper Media</h1>
             <p class="animate-slide-right">Spreading God's Message of Love Through Song and Christ-Centered Literature</p>
             <button class="cta-button animate-pulse" aria-label="Subscribe to YouTube channel">Subscribe on YouTube</button>
         </div>
@@ -177,27 +177,6 @@ padding: 8px 18px;
                   <a href="https://hdccm.com" target="_blank" rel="noopener noreferrer">HDCCM.com</a> | 
                   <a href="https://fuwyl.com" target="_blank" rel="noopener noreferrer">FUWYL.com</a>.
                 </p>
-
-                <div class="impact-stats">
-                    <div class="impact-stat animate-zoom">
-                        <strong>60+</strong>
-                        <p>Languages Translated</p>
-                    </div>
-                    <div class="impact-stat animate-zoom">
-                        <strong>56K+</strong>
-                        <p>Views Worldwide</p>
-                    </div>
-                    <div class="impact-stat animate-zoom">
-                        <strong>100+</strong>
-                        <p>Countries Reached</p>
-                    </div>
-                </div>
-            </div>
-            <div class="about-video animate-slide-right">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/eYJmT-b-MYY?si=EzaS611mSf2PlsLt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-        </div>
-    </section>
 
     <!--fuwyl section-->
 
@@ -634,4 +613,5 @@ translationsFUWYL.forEach(item => {
 </body>
 
 </html>
+
 
