--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@ padding: 8px 18px;
                   <a href="https://hdccm.com" target="_blank" rel="noopener noreferrer">HDCCM.com</a> | 
                   <a href="https://fuwyl.com" target="_blank" rel="noopener noreferrer">FUWYL.com</a>.
                 </p>
+                          <div class="impact-stats">
+                    
+                </div>
+            </div>
             <div class="about-video animate-slide-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/eYJmT-b-MYY?si=EzaS611mSf2PlsLt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -618,6 +622,7 @@ translationsFUWYL.forEach(item => {
 </body>
 
 </html>
+
 
 
 
